--- a/index.html
+++ b/index.html
@@ -24,9 +24,16 @@
 <p>This is project has been conducted strictly for research purposes. If you would like to contribute to POMDPy or if you have any comments or suggestions, feel free to send me a pull request or send me an email at <a href="mailto:pemami@ufl.edu">pemami@ufl.edu</a>.  </p>
 
 <h2>
-<a id="belief-tree-structure" class="anchor" href="#belief-tree-structure" aria-hidden="true"><span class="octicon octicon-link"></span></a>Belief Tree structure</h2>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
 
-<p>Parent BeliefNode -&gt; ActionMapping -&gt; ActionMappingEntry -&gt; ActionNode -&gt; ObservationMap -&gt; ObservationMappingEntry -&gt; Child BeliefNode</p>
+<p>From the root directory of the project, run 
+    <code>python setup.py install</code></p>
+
+<h2>
+<a id="running-a-sample" class="anchor" href="#running-a-sample" aria-hidden="true"><span class="octicon octicon-link"></span></a>Running a sample</h2>
+
+<p>After tweaking the configuration files found in the config package to your liking , run the RockSample Problem with 
+    <code>python src/run_pomdp.py</code></p>
 
 <h2>
 <a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dependencies</h2>
@@ -38,6 +45,7 @@
 <li>numpy 1.9.2</li>
 <li>matplotlib 1.4.3</li>
 <li>pytest 2.7.0</li>
+<li>pygame 1.9.1 </li>
 </ul>
 
 <h2>
@@ -47,6 +55,7 @@
 <li>Unit Test coverage is currently minimal, so this area is going to be expanded upon soon</li>
 <li>The only current "working" test-problem is RockSample. More test problems are being worked on </li>
 <li>An extension for GPU-MCTS is being planned. The NumbaPro Python module seems to be a good bet for this</li>
+<li>The PyGame sim is currently not supported, due to recent changes</li>
 </ul>
 
       <footer class="site-footer">
