Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 <h2>
 <a id="running-a-sample" class="anchor" href="#running-a-sample" aria-hidden="true"><span class="octicon octicon-link"></span></a>Running a sample</h2>
 
-<p>After tweaking the configuration files found in the config package to your liking , run the RockSample Problem with 
-    <code>python src/run_pomdp.py</code></p>
+<p>After tweaking the configuration files found in the config package , run the RockSample Problem with</p>
+
+<pre><code>python src/run_pomdp.py
+</code></pre>
 
 <h2>
 <a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dependencies</h2>
@@ -43,6 +45,11 @@
 <ul>
 <li>Python 2.7.9</li>
 <li>numpy 1.9.2</li>
+</ul>
+
+<p>Optional, for extended functionality:</p>
+
+<ul>
 <li>matplotlib 1.4.3</li>
 <li>pytest 2.7.0</li>
 <li>pygame 1.9.1 </li>
