Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <h2>
 <a id="running-a-sample" class="anchor" href="#running-a-sample" aria-hidden="true"><span class="octicon octicon-link"></span></a>Running a sample</h2>
 
-<p>After tweaking the configuration files found in the config package , run the RockSample Problem with</p>
+<p>After tweaking the configuration files found in the config package (optional), run the RockSample Problem with</p>
 
 <pre><code>python src/run_pomdp.py
 </code></pre>
