Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ The default RockSample Problem is RockSample(7, 8), a 7 x 7 grid with 8 rocks.</
 <pre><code>python src/run_pomdp.py
 </code></pre>
 
-<p>See src/README.md for more implementation details.</p>
+<p>The TigerProblem can be ran by changing the value of the "SampleProblem" variable in src/run_pomdp.py to 2
+See src/README.md for more implementation details.</p>
 
 <h2>
 <a id="running-tests" class="anchor" href="#running-tests" aria-hidden="true"><span class="octicon octicon-link"></span></a>Running tests</h2>
@@ -82,7 +83,7 @@ The default RockSample Problem is RockSample(7, 8), a 7 x 7 grid with 8 rocks.</
 
 <ul>
 <li>Unit Test coverage is currently minimal, so this area is going to be expanded upon soon</li>
-<li>The only current "working" test-problem is RockSample. More test problems are being worked on </li>
+<li>The current test-problems are the RockSample and TigerProblem. More test problems are being worked on </li>
 <li>An extension for GPU-MCTS is being planned. The NumbaPro Python module seems to be a good bet for this</li>
 <li>The PyGame sim is currently not supported, due to recent changes</li>
 </ul>
