Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ The default RockSample Problem is RockSample(7, 8), a 7 x 7 grid with 8 rocks.</
 <pre><code>python src/run_pomdp.py
 </code></pre>
 
-<p>The TigerProblem can be ran by changing the value of the "SampleProblem" variable in src/run_pomdp.py to 2
+<p>The TigerProblem can be run by changing the value of the "SampleProblem" variable in src/run_pomdp.py to 2.
 See src/README.md for more implementation details.</p>
 
 <h2>
